syntax='proto3';

package grpc;

import 'message.proto';
// generates by calling internal server, changeset->apply
service NodeService {
  // ot of duplicating node from a space
  rpc CopyNodeEffectOt (NodeCopyRo) returns (BasicResult);
  // effect ot of deleting a node from a space
  rpc DeleteNodeEffectOt (NodeDeleteRo) returns (BasicResult);
}


